parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE
Rule 2     declaration -> PAN ID ASSIGN NUMBER
Rule 3     condition -> ID GREATER NUMBER
Rule 4     increment -> ID INCREMENT

Terminals, with rules where they appear

ASSIGN               : 2
GREATER              : 3
ID                   : 1 2 3 4
INCREMENT            : 4
LBRACE               : 1
LPAREN               : 1
NUMBER               : 2 3
PAN                  : 2
PARAQUE              : 1
RBRACE               : 1
RPAREN               : 1
SEMI                 : 1 1 1
error                : 

Nonterminals, with rules where they appear

condition            : 1
declaration          : 1
increment            : 1
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE

    PARAQUE         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PARAQUE . LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE

    LPAREN          shift and go to state 3


state 3

    (1) program -> PARAQUE LPAREN . declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE
    (2) declaration -> . PAN ID ASSIGN NUMBER

    PAN             shift and go to state 5

    declaration                    shift and go to state 4

state 4

    (1) program -> PARAQUE LPAREN declaration . SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE

    SEMI            shift and go to state 6


state 5

    (2) declaration -> PAN . ID ASSIGN NUMBER

    ID              shift and go to state 7


state 6

    (1) program -> PARAQUE LPAREN declaration SEMI . condition SEMI increment SEMI RPAREN LBRACE ID RBRACE
    (3) condition -> . ID GREATER NUMBER

    ID              shift and go to state 9

    condition                      shift and go to state 8

state 7

    (2) declaration -> PAN ID . ASSIGN NUMBER

    ASSIGN          shift and go to state 10


state 8

    (1) program -> PARAQUE LPAREN declaration SEMI condition . SEMI increment SEMI RPAREN LBRACE ID RBRACE

    SEMI            shift and go to state 11


state 9

    (3) condition -> ID . GREATER NUMBER

    GREATER         shift and go to state 12


state 10

    (2) declaration -> PAN ID ASSIGN . NUMBER

    NUMBER          shift and go to state 13


state 11

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI . increment SEMI RPAREN LBRACE ID RBRACE
    (4) increment -> . ID INCREMENT

    ID              shift and go to state 15

    increment                      shift and go to state 14

state 12

    (3) condition -> ID GREATER . NUMBER

    NUMBER          shift and go to state 16


state 13

    (2) declaration -> PAN ID ASSIGN NUMBER .

    SEMI            reduce using rule 2 (declaration -> PAN ID ASSIGN NUMBER .)


state 14

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment . SEMI RPAREN LBRACE ID RBRACE

    SEMI            shift and go to state 17


state 15

    (4) increment -> ID . INCREMENT

    INCREMENT       shift and go to state 18


state 16

    (3) condition -> ID GREATER NUMBER .

    SEMI            reduce using rule 3 (condition -> ID GREATER NUMBER .)


state 17

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI . RPAREN LBRACE ID RBRACE

    RPAREN          shift and go to state 19


state 18

    (4) increment -> ID INCREMENT .

    SEMI            reduce using rule 4 (increment -> ID INCREMENT .)


state 19

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN . LBRACE ID RBRACE

    LBRACE          shift and go to state 20


state 20

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE . ID RBRACE

    ID              shift and go to state 21


state 21

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID . RBRACE

    RBRACE          shift and go to state 22


state 22

    (1) program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE .

    $end            reduce using rule 1 (program -> PARAQUE LPAREN declaration SEMI condition SEMI increment SEMI RPAREN LBRACE ID RBRACE .)

